Adapt ModLauncher Code to FML standards